--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li><a href="#" id="btn-rm">Удаление</a></li>
                     <li><a href="#" id="btn-mailing">Отправка рассылки</a></li>
                     <li><a href="#" id="btn-proc">Выбор дочернего процессаи</a></li>
+                    <li><a href="#" id="btn-proxy">Прокси</a></li>
                 </ul>
             </div>
         </div>
@@ -46,16 +47,13 @@
         <div class="col-md-12">
             <svg id="svg-arr" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
                 <defs>
-                    <marker id="arrowhead" viewBox="0 0 10 10" refX="3" refY="5" markerWidth="6" markerHeight="6"
-                            orient="auto">
+                    <marker id="arrowhead" viewBox="0 0 10 10" refX="3" refY="5" markerWidth="6" markerHeight="6" orient="auto">
                         <path d="M 0 0 L 10 5 L 0 10 z"/>
                     </marker>
                 </defs>
                 <g id="p" fill="none" stroke="black" stroke-width="2" marker-end="url(#arrowhead)"></g>
             </svg>
-            <div id="process">
-
-            </div>
+            <div id="process"></div>
         </div>
     </div>
 </div>
